--- a/NetBeansProjects/Lista de Compras/src/listasdecompras/Compra.form
+++ b/NetBeansProjects/Lista de Compras/src/listasdecompras/Compra.form
@@ -108,6 +108,9 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btAddActionPerformed"/>
           </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JButton" name="btDeletar">
           <Properties>
