--- a/NetBeansProjects/Lista de Compras/src/listasdecompras/Compra.form
+++ b/NetBeansProjects/Lista de Compras/src/listasdecompras/Compra.form
@@ -40,6 +40,9 @@
           <Color blue="ff" green="ff" id="white" palette="1" red="ff" type="palette"/>
         </Property>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
 
       <Layout>
         <DimensionLayout dim="0">
