--- a/NetBeansProjects/Lista de Compras/src/listasdecompras/Compra.form
+++ b/NetBeansProjects/Lista de Compras/src/listasdecompras/Compra.form
@@ -49,10 +49,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lbPreco" min="-2" max="-2" attributes="0"/>
-                      <Component id="lbMes" alignment="0" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="lbMes" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="btAdd" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -75,8 +72,7 @@
                       <Component id="btSalvar" min="-2" max="-2" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Component id="lbMes" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Component id="lbPreco" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                       </Group>
                       <Component id="btDeletar" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Component id="btAdd" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -92,13 +88,6 @@
           <Properties>
             <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection code="&quot;M&#xea;s: &quot; + mes" type="code"/>
-            </Property>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="lbPreco">
-          <Properties>
-            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="&quot;Pre&#xe7;o: &quot; + precoTotal" type="code"/>
             </Property>
           </Properties>
         </Component>
