--- a/NetBeansProjects/Lista de Compras/src/listasdecompras/Home.form
+++ b/NetBeansProjects/Lista de Compras/src/listasdecompras/Home.form
@@ -17,6 +17,14 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="imAddActionPerformed"/>
               </Events>
             </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="imCriarLista">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Criar lista usando a previs&#xe3;o"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="imCriarListaActionPerformed"/>
+              </Events>
+            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="imSobre">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Sobre"/>
